# snaplet

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
snaplet/: cli.py  const.py  utils.py
snaplet/snaplet/: __init__.py  manager.py
tests/: test_cli.py  test_cli_detailed.py  test_manager.py  test_manager_detailed.py
