[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snaplet"
version = "0.1.0"
description = "Snaplet - 视频关键帧提取与重组工具"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Allen Shaw", email = "lonsty@sina.com"}]
maintainers = [{name = "Allen Shaw", email = "lonsty@sina.com"}]
keywords = ["video", "keyframe", "snaplet", "cli", "tool"]
dependencies = [
    "moviepy==1.0.3",
    "opencv-python>=4.5.5",
    "typer[all]>=0.9.0",
    "Pillow>=9.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/lonsty/snaplet"
Documentation = "https://github.com/lonsty/snaplet#readme"
Repository = "https://github.com/lonsty/snaplet"
BugTracker = "https://github.com/lonsty/snaplet/issues"

[project.scripts]
snaplet = "snaplet.cli:app"